ENH: adjust Slicer External_Project dependencies.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12093 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -806,7 +806,7 @@ set(proj Slicer3)
 
 set(slicer_PYTHON_INCLUDE)
 set(slicer_PYTHON_LIBRARY)
-set(slicer_DEPENDS tcl teem OpenIGTLink BatchMake vtk)
+set(slicer_DEPENDS tcl tk itcl teem OpenIGTLink BatchMake vtk Insight)
 
 if(Slicer3_USE_KWWIDGETS)
   list(APPEND slicer_DEPENDS KWWidgets)
