ENH: SlicerQt - add qCTKButtonGroup, a QButtonGroup that allows a state of unchecked button. If an already checked button is clicked again, it unchecks the button.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12130 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/CMakeLists.txt
+++ b/Libs/qCTKWidgets/CMakeLists.txt
@@ -32,6 +32,8 @@ SET(qCTKWidgets_SRCS
   qCTKAbstractLibraryFactory.txx
   qCTKAddRemoveComboBox.cxx
   qCTKAddRemoveComboBox.h
+  qCTKButtonGroup.cxx
+  qCTKButtonGroup.h
   qCTKCollapsibleButton.cxx
   qCTKCollapsibleButton.h
   qCTKCollapsibleGroupBox.cxx
@@ -71,6 +73,7 @@ SET(qCTKWidgets_SRCS
 # Headers that should run through moc
 SET(qCTKWidgets_MOC_SRCS
   qCTKAddRemoveComboBox.h
+  qCTKButtonGroup.h
   qCTKCollapsibleButton.h
   qCTKCollapsibleGroupBox.h
   qCTKColorPickerButton.h
