--- a/Base/GUI/Testing/CMakeLists.txt
+++ b/Base/GUI/Testing/CMakeLists.txt
@@ -1,3 +1,15 @@
+SET(KIT BaseGUI)
+SET(CMAKE_TESTDRIVER_BEFORE_TESTMAIN "DEBUG_LEAKS_ENABLE_EXIT_ERROR();" )
+CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
+  vtkSlicerModelsGUITest1.cxx
+  EXTRA_INCLUDE TestingMacros.h
+  )
+
+SET (TestsToRun ${Tests})
+REMOVE (TestsToRun ${KIT}CxxTests.cxx)
+
+SET(LIBRARY_NAME ${PROJECT_NAME})
+
 # --------------------------------------------------------------------------
 # Testing
 
@@ -11,3 +23,23 @@ ADD_TEST(Slicer3FiducialsTestGlyphs ${Slicer3_BINARY_DIR}/Slicer3 --test-mode --
 
 SET_TESTS_PROPERTIES( Slicer3FiducialsTest1 PROPERTIES TIMEOUT ${SHORT_TEST_TIMEOUT} )
 SET_TESTS_PROPERTIES( Slicer3FiducialsTest2 PROPERTIES TIMEOUT ${SHORT_TEST_TIMEOUT} )
+
+ADD_EXECUTABLE(${KIT}CxxTests ${Tests})
+TARGET_LINK_LIBRARIES(${KIT}CxxTests 
+  ${lib_name} 
+  SlicerBaseGUI
+  )
+
+SET( BaseGUI_TESTS ${CXX_TEST_PATH}/${KIT}CxxTests)
+
+IF(WIN32)
+  SET(BaseGUI_TESTS ${CXX_TEST_PATH}/${CMAKE_BUILD_TYPE}/${KIT}CxxTests)
+ENDIF(WIN32)
+
+MACRO( SIMPLE_TEST  TESTNAME )
+  ADD_TEST( ${TESTNAME} ${LAUNCH_EXE} ${BaseGUI_TESTS} ${TESTNAME} 
+    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/SlicerQT
+    )
+ENDMACRO( SIMPLE_TEST  )
+
+SIMPLE_TEST( vtkSlicerModelsGUITest1 )
