ENH: SlicerQt - add a new widget: qCTKDynamicSpacer that has a dynamic size policy depending on the activate slot. This could be usefull when you want the size policy of a spacer to depends of some conditions. Example: one wants the spacer to take no space when a collapsible button is expanded. but when the collapsible button is closed, you want the spacer to be expanded.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12165 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/CMakeLists.txt
+++ b/Libs/qCTKWidgets/CMakeLists.txt
@@ -44,6 +44,8 @@ SET(qCTKWidgets_SRCS
   qCTKCoordinatesWidget.h
   qCTKDoubleSlider.cxx
   qCTKDoubleSlider.h
+  qCTKDynamicSpacer.cxx
+  qCTKDynamicSpacer.h
   qCTKFittedTextBrowser.cxx
   qCTKFittedTextBrowser.h
   qCTKFlowLayout.cxx
@@ -79,6 +81,7 @@ SET(qCTKWidgets_MOC_SRCS
   qCTKColorPickerButton.h
   qCTKCoordinatesWidget.h
   qCTKDoubleSlider.h
+  qCTKDynamicSpacer.h
   qCTKFittedTextBrowser.h
   qCTKMatrixWidget.h
   qCTKMenuButton.h
