BUG: SlicerQT - Since the parameter '--' is 'swallowed' by Slicer3 tcl launcher - Let's disable test qVTKCommandOptionsTest7
On windows platform, the parameter '--' is interpreted and not passed to the real
Slicer3 or SlicerQT executable.
See http://www.tcl.tk/man/tcl7.6/UserCmd/wish.1.html

git-svn-id: http://svn.slicer.org/Slicer3/trunk@12176 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qVTKWidgets/Testing/CMakeLists.txt
+++ b/Libs/qVTKWidgets/Testing/CMakeLists.txt
@@ -96,9 +96,9 @@ ADD_TEST( qVTKCommandOptionsTest6 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
           qVTKCommandOptionsTest1 --test-if-ignorerest-flag-works
           --ignore-rest --nothing=foo extra1 /? )
 
-ADD_TEST( qVTKCommandOptionsTest7 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
-          qVTKCommandOptionsTest1 --test-if-ignorerest-flag-works
-          -- --nothing=foo extra1 /? )
+#ADD_TEST( qVTKCommandOptionsTest7 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
+#          qVTKCommandOptionsTest1 --test-if-ignorerest-flag-works
+#          -- --nothing=foo extra1 /? )
 
 # qVTKObjectTest1
 SIMPLE_TEST( qVTKObjectTest1 )
