ENH: adding some tests
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12178 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/GUI/Testing/CMakeLists.txt
+++ b/Base/GUI/Testing/CMakeLists.txt
@@ -2,6 +2,8 @@ SET(KIT BaseGUI)
 SET(CMAKE_TESTDRIVER_BEFORE_TESTMAIN "DEBUG_LEAKS_ENABLE_EXIT_ERROR();" )
 CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   vtkSlicerModelsGUITest1.cxx
+  vtkSlicerModuleGUITest1.cxx
+  vtkSlicerComponentGUITest1.cxx
   EXTRA_INCLUDE TestingMacros.h
   )
 
@@ -20,6 +22,7 @@ ADD_TEST(Slicer3GUITest2 ${Slicer3_BINARY_DIR}/Slicer3 --test-mode --script ${Sl
 ADD_TEST(Slicer3FiducialsTest1 ${Slicer3_BINARY_DIR}/Slicer3 --test-mode --script ${Slicer3_SOURCE_DIR}/Base/GUI/Testing/TestFiducials.tcl)
 ADD_TEST(Slicer3FiducialsTest2 ${Slicer3_BINARY_DIR}/Slicer3 --test-mode --script ${Slicer3_SOURCE_DIR}/Base/GUI/Testing/TestFiducialsAdd.tcl)
 ADD_TEST(Slicer3FiducialsTestGlyphs ${Slicer3_BINARY_DIR}/Slicer3 --test-mode --script ${Slicer3_SOURCE_DIR}/Base/GUI/Testing/TestFiducialsGlyphs.tcl)
+ADD_TEST(Slicer3FiducialsTestChangeGlyphs ${Slicer3_BINARY_DIR}/Slicer3 --test-mode --script ${Slicer3_SOURCE_DIR}/Base/GUI/Testing/TestFiducialsAddSymbolScale.tcl)
 ADD_TEST(Slicer3RestoreSceneSnapshotCompareViewTest1 ${Slicer3_BINARY_DIR}/Slicer3 --test-mode --script ${Slicer3_SOURCE_DIR}/Base/GUI/Testing/TestRestoreSceneSnapshotCompareView.tcl)
 
 SET_TESTS_PROPERTIES( Slicer3FiducialsTest1 PROPERTIES TIMEOUT ${SHORT_TEST_TIMEOUT} )
@@ -45,3 +48,5 @@ MACRO( SIMPLE_TEST  TESTNAME )
 ENDMACRO( SIMPLE_TEST  )
 
 SIMPLE_TEST( vtkSlicerModelsGUITest1 )
+SIMPLE_TEST( vtkSlicerModuleGUITest1 )
+SIMPLE_TEST( vtkSlicerComponentGUITest1 )
