ENH: SlicerQT - Added widget qCTKConsoleWidgets to CTK. This widget, imported from paraview, provided an interactive console.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12218 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/CMakeLists.txt
+++ b/Libs/qCTKWidgets/CMakeLists.txt
@@ -40,6 +40,8 @@ SET(qCTKWidgets_SRCS
   qCTKCollapsibleGroupBox.h
   qCTKColorPickerButton.cxx
   qCTKColorPickerButton.h
+  qCTKConsoleWidget.cxx
+  qCTKConsoleWidget.h
   qCTKCoordinatesWidget.cxx
   qCTKCoordinatesWidget.h
   qCTKDoubleSlider.cxx
@@ -79,6 +81,7 @@ SET(qCTKWidgets_MOC_SRCS
   qCTKCollapsibleButton.h
   qCTKCollapsibleGroupBox.h
   qCTKColorPickerButton.h
+  qCTKConsoleWidget.h
   qCTKCoordinatesWidget.h
   qCTKDoubleSlider.h
   qCTKDynamicSpacer.h
