ENH: Classes in Libs/MRML are now python wrapped if VTK_WRAP_PYTHON is ON
The way TCL library dependencies were added has also been reviewed.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@12225 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRML/CMakeLists.txt
+++ b/Libs/MRML/CMakeLists.txt
@@ -217,18 +217,19 @@ ENDIF (VTK_WRAP_TCL)
 
 # --------------------------------------------------------------------------
 # Build and install the library
-SET(srcs
-  ${MRML_SRCS}
-  )
+
+SET(srcs ${MRML_SRCS})
+
 IF (VTK_WRAP_TCL)
-  SET(srcs
-    ${srcs}
-    ${MRML_TCL_SRCS}
-    )
+  SET(srcs ${srcs} ${MRML_TCL_SRCS})
 ENDIF (VTK_WRAP_TCL)
-set(lib_name MRML)
-add_library(${lib_name} 
-  ${srcs}
+
+SET(lib_name MRML)
+ADD_LIBRARY(${lib_name} ${srcs})
+
+SET(VTK_LIBRARIES
+  vtkHybrid
+  vtkRendering
   )
 
 SET(libs
@@ -240,26 +241,20 @@ SET(libs
   ITKIO
   ITKDICOMParser
   FreeSurfer
+  ${VTK_LIBRARIES}
   )
-IF (VTK_WRAP_TCL)
-  SET(libs
-    ${libs}
-    vtkHybridTCL
-    )
-ELSE (VTK_WRAP_TCL)
-  SET(libs
-    ${libs}
-    vtkHybrid
-    vtkRendering
-    )
-ENDIF (VTK_WRAP_TCL)
-target_link_libraries(${lib_name}
-  ${libs}
-  )
+  
+IF(MRML_USE_vtkTeem)
+  SET(libs ${libs} vtkTeem)
+ENDIF(MRML_USE_vtkTeem)
 
-  if(MRML_USE_vtkTeem)
-    target_link_libraries(${lib_name} vtkTeem)
-  endif(MRML_USE_vtkTeem)
+TARGET_LINK_LIBRARIES(${lib_name} ${libs})
+
+IF (VTK_WRAP_TCL)
+  FOREACH(c ${VTK_LIBRARIES})
+    TARGET_LINK_LIBRARIES(${lib_name} ${c}TCL)
+  ENDFOREACH(c)
+ENDIF()
 
 # Apply user-defined properties to the library target.
 IF(Slicer3_LIBRARY_PROPERTIES)
@@ -273,6 +268,39 @@ install(TARGETS ${lib_name}
   LIBRARY DESTINATION lib/${PROJECT_NAME} COMPONENT RuntimeLibraries
   ARCHIVE DESTINATION lib/${PROJECT_NAME} COMPONENT Development
   )
+
+# --------------------------------------------------------------------------
+# Create Python wrappers if VTK is wrapped in Python
+#
+
+IF(VTK_WRAP_PYTHON AND BUILD_SHARED_LIBS)
+
+  SET(KIT_PYTHON_LIBRARIES ${VTK_LIBRARIES})
+
+  INCLUDE(${VTK_CMAKE_DIR}/vtkWrapPython.cmake)
+  VTK_WRAP_PYTHON3(${lib_name}Python PYTHON_SRCS "${MRML_SRCS}")
+  ADD_LIBRARY(${lib_name}PythonD ${PYTHON_SRCS})
+  ADD_LIBRARY(${lib_name}Python MODULE ${lib_name}PythonInit.cxx)
+  
+  TARGET_LINK_LIBRARIES(${lib_name}PythonD ${lib_name})
+  
+  FOREACH(c ${KIT_PYTHON_LIBRARIES})
+    TARGET_LINK_LIBRARIES(${lib_name}PythonD ${c}PythonD)
+  ENDFOREACH(c)
+
+  TARGET_LINK_LIBRARIES(${lib_name}Python ${lib_name}PythonD)
+
+  ## Python modules on Windows must have the extension ".pyd"
+  IF(WIN32 AND NOT CYGWIN)
+    SET_TARGET_PROPERTIES(${lib_name}Python PROPERTIES SUFFIX ".pyd")
+  ENDIF(WIN32 AND NOT CYGWIN)
+
+  INSTALL(TARGETS ${lib_name}PythonD ${lib_name}Python
+    RUNTIME DESTINATION bin COMPONENT RuntimeLibraries 
+    LIBRARY DESTINATION lib/${PROJECT_NAME} COMPONENT RuntimeLibraries
+    ARCHIVE DESTINATION lib/${PROJECT_NAME} COMPONENT Development)
+
+ENDIF(VTK_WRAP_PYTHON AND BUILD_SHARED_LIBS)
 
 # --------------------------------------------------------------------------
 # Testing (requires some of the examples)
