ENH: SlicerQT - Added Base/Python directory containing a set of python script loaded by the python shell.
slicerqt.py is the main script that should be executed by the python shell.

The scripts logic.py, mrml.py, remoteio.py, teem.py, freesurfer.py will
take care of loading the vtk libraries wrapped in python.

All the script will also be pre-compiled and copied in {Slicer_home}/bin/Python

git-svn-id: http://svn.slicer.org/Slicer3/trunk@12231 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/CMakeLists.txt
+++ b/Base/CMakeLists.txt
@@ -32,3 +32,7 @@ IF (Slicer3_USE_KWWIDGETS)
 ENDIF (Slicer3_USE_KWWIDGETS)
 
 ADD_SUBDIRECTORY(CLI)
+
+IF(Slicer3_USE_PYTHONQT)
+  ADD_SUBDIRECTORY(Python)
+ENDIF(Slicer3_USE_PYTHONQT)
