ENH: SlicerQT - Added QTCore/qSlicerPythonManager class and QTCore pythonqt decorator.
SlicerPythonManager is responsible to configure pythonQt by
 - adding the correct path containing the different wrapped libraries.
 - registering the pythonqt decorator
 - executing the python main script 'slicerqt.py'

git-svn-id: http://svn.slicer.org/Slicer3/trunk@12234 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCore/CMakeLists.txt
+++ b/Base/QTCore/CMakeLists.txt
@@ -14,6 +14,7 @@ SET(slicer_qtbase_include_directories
   ${ModuleDescriptionParser_BINARY_DIR}
   ${MRMLCLI_SOURCE_DIR}
   ${MRMLCLI_BINARY_DIR}
+  ${qCTKWidgets_PYTHONQT_INCLUDE_DIR}
   )
   
 # Source files
@@ -36,7 +37,13 @@ SET(slicer_qtbase_SRCS
 SET(slicer_qtbase_MOC_SRCS
   qSlicerCoreApplication.h
   qSlicerModuleManager.h
+  ${slicer_qtbase_pythonqt_MOC_SRCS}
   )
+
+# PythonQt decorator
+IF(Slicer3_USE_PYTHONQT)
+  SET(slicer_qtbase_MOC_SRCS ${slicer_qtbase_MOC_SRCS} qSlicerBaseQTBasePythonQtDecorators.h)
+ENDIF(Slicer3_USE_PYTHONQT)
 
 # UI files
 #SET(slicer_qtbase_UI_SRCS)
@@ -46,12 +53,31 @@ SET(slicer_qtbase_target_libraries
   ModuleDescriptionParser
   MRMLCLI
   qSlicerBaseQTBase
+  ${qCTKWidgets_PYTHONQT_LIBRARIES}
   )
 
 # Resources
 SET(qt_module_resources
   Resources/qSlicerBaseQTCore.qrc
 )
+
+# Python wrap 
+IF(Slicer3_USE_PYTHONQT)
+
+  # Sources
+  SET(slicer_qtbase_SRCS
+    ${slicer_qtbase_SRCS}
+    qSlicerPythonManager.cxx
+    qSlicerPythonManager.h
+    )
+
+  # Headers that should run through moc
+  SET(slicer_qtbase_MOC_SRCS
+    ${slicer_qtbase_MOC_SRCS}
+    qSlicerPythonManager.h
+    )
+    
+ENDIF(Slicer3_USE_PYTHONQT)
 
 Slicer3_build_slicer_qtbase_library(
   NAME ${PROJECT_NAME}
