ENH: Use vtkGPURayCastMapper as a volume rendering.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12239 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,6 +239,12 @@ ELSE(Slicer3_USE_KWWIDGETS)
 ENDIF (Slicer3_USE_KWWIDGETS)
 
 #-----------------------------------------------------------------------------
+# Slicer3 is built with cvs head
+#
+option(Slicer3_USE_CVS_HEAD "Slicer3 is configurated with cvs head." OFF)
+mark_as_advanced(Slicer3_USE_CVS_HEAD)
+
+#-----------------------------------------------------------------------------
 #
 # Call macro defined in ${PROJECT_SOURCE_DIR}/CMake/Slicer3FindQT.cmake
 #
