COMP: Rename Slicer3_USE_CVS_HEAD into Slicer3_USE_VTK_CVSHEAD
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12241 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -241,8 +241,8 @@ ENDIF (Slicer3_USE_KWWIDGETS)
 #-----------------------------------------------------------------------------
 # Slicer3 is built with cvs head
 #
-option(Slicer3_USE_CVS_HEAD "Slicer3 is configurated with cvs head." OFF)
-mark_as_advanced(Slicer3_USE_CVS_HEAD)
+option(Slicer3_USE_VTK_CVSHEAD "Slicer3 is configurated with cvs head." OFF)
+mark_as_advanced(Slicer3_USE_VTK_CVSHEAD)
 
 #-----------------------------------------------------------------------------
 #
